# axum-server-timing

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: pr.yml
examples/: axum-server.rs  axum-with-extension.rs
src/: lib.rs  test.rs
