[package]
name = "axum-server-timing"
version = "2.0.1"
edition = "2021"
authors = ["Jens Walter <jens@apimeister.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/JensWalter/axum-server-timing/"
documentation = "https://docs.rs/axum-server-timing/"
description = "An axum layer to inject the Server-Timing HTTP header into the response."
rust-version = "1.70"
keywords = ["axum", "http-header", "web-server"]

[dependencies]
http = "1"
tower = "0.5"
pin-project-lite = "0.2"
tokio = {version = "1", default-features = false, features = ["sync"] }

[dev-dependencies]
tokio = {version = "1", features = ["full"] }
reqwest = { version = "0.12" }
axum = { version = "0.8", features = ["macros"] }